Fix button on mobile

--- a/styles/Button.module.css
+++ b/styles/Button.module.css
@@ -13,6 +13,11 @@
   transition: all 50ms ease-in-out;
 }
 
+.button {
+  user-select: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
 .disabled {
   pointer-events: none;
   opacity: 0.6;
@@ -84,6 +89,14 @@
 .filled:not(.disabled) .overlay {
   opacity: 1;
   background: linear-gradient(rgba(255, 255, 255, 0.2), transparent);
+}
+
+.button:not(.disabled):active > .overlay {
+  opacity: 0.1;
+}
+
+.filled:not(.disabled):active > .overlay {
+  background: none;
 }
 
 @media (hover: hover) {
